--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "daisyui": "^5.5.5",
     "eslint": "^9",
     "eslint-config-next": "15.5.2",
     "eslint-plugin-react-hooks": "^5.2.0",
